updated leaderboard icons and fixed overflow issue

--- a/Main/static/css/dashboard.css
+++ b/Main/static/css/dashboard.css
@@ -606,7 +606,6 @@ body {
 }
 
 #main {
-  height: 100vh;
   width: 100%;
   position: relative;
   background: #111111;
